--- a/SdkSetup/AndroidManifest.xml
+++ b/SdkSetup/AndroidManifest.xml
@@ -18,25 +18,31 @@
         package="com.android.sdksetup">
 
     <!-- For miscellaneous settings -->
+    <uses-permission android:name="android.permission.BACKUP" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.MANAGE_USERS" />
     <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_SYSTEM_SETTINGS" />
     <uses-permission android:name="android.permission.SET_KEYBOARD_LAYOUT" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.STATUS_BAR" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYSTEM_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+
     <application>
         <activity android:name="DefaultActivity"
                 android:excludeFromRecents="true"
-                android:exported="true">
+                android:exported="True"
+                android:launchMode="singleTask">
             <intent-filter android:priority="3">
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.SETUP_WIZARD" />
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.BACKUP" />
 </manifest>
 
