Replace qemu-adb-keys and qemu-device-state with qemu-export-property
These two binaries do almost the same things.

Bug: 250696437
Test: boot
Signed-off-by: Roman Kiryanov <rkir@google.com>
Change-Id: Iaedc7c671772bb8d5d314d3d8871ff68c371ebfc

--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -164,13 +164,13 @@ service qemu-props /vendor/bin/qemu-props
     group root
     oneshot
 
-service qemu-adb-keys /vendor/bin/qemu-adb-keys
+service qemu-adb-keys /vendor/bin/qemu-export-property qemu.adb.pubkey /data/vendor/adb/adb_keys
     class core
     user root
     group root
     oneshot
 
-service qemu-device-state /vendor/bin/qemu-device-state
+service qemu-device-state /vendor/bin/qemu-export-property -f qemu.device_state /data/vendor/devicestate/device_state_configuration.xml
     class core
     user root
     group root
