--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -104,10 +104,10 @@ on boot
     mkdir /config/usb_gadget/g1 0770 root root
 
 service ranchu-setup /vendor/bin/init.ranchu-core.sh
-    class core
     user root
     group root
     oneshot
+    disabled
 
 service qemu-adb-setup /system_ext/bin/init.qemu-adb-keys.sh
     class core
@@ -159,22 +159,22 @@ service dhcpclient_def /vendor/bin/dhcpclient -i eth0 --no-gateway
 # class 'core'
 #
 service qemu-props /vendor/bin/qemu-props
-    class core
     user root
     group root
     oneshot
+    disabled
 
 service qemu-adb-keys /vendor/bin/qemu-export-property qemu.adb.pubkey /data/vendor/adb/adb_keys
-    class core
     user root
     group root
     oneshot
+    disabled
 
 service qemu-device-state /vendor/bin/qemu-export-property -f qemu.device_state /data/vendor/devicestate/device_state_configuration.xml
-    class core
     user root
     group root
     oneshot
+    disabled
 
 service goldfish-logcat /system/bin/logcat -f /dev/hvc1 ${ro.boot.logcat}
     class main
