RESTRICT AUTOMERGE. Enable VsockSnapshotLoadFixed_b231345789
Bug: 231345789
Test: presubmit
Change-Id: Ic1df2683b3a5853f1577c19cbae183613334db43
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/data/etc/google/64bit/user/arm64/advancedFeatures.ini
+++ b/data/etc/google/64bit/user/arm64/advancedFeatures.ini
@@ -27,3 +27,4 @@ DeviceSkinOverlay = on
 VulkanQueueSubmitWithCommands = on
 VulkanBatchedDescriptorSetUpdate = on
 DeviceStateOnBoot = on
+VsockSnapshotLoadFixed_b231345789 = on
