--- a/data/etc/google/userdebug/advancedFeatures.ini
+++ b/data/etc/google/userdebug/advancedFeatures.ini
@@ -28,3 +28,4 @@ VulkanQueueSubmitWithCommands = on
 VulkanBatchedDescriptorSetUpdate = on
 DeviceStateOnBoot = on
 HWCMultiConfigs = on
+VsockSnapshotLoadFixed_b231345789 = on
