--- a/ueventd.ranchu.rc
+++ b/ueventd.ranchu.rc
@@ -2,6 +2,7 @@
 /dev/qemu_trace           0666   system     system
 /dev/ion                  0664   system     system
 /dev/goldfish_pipe        0666   system     system
+/dev/goldfish_pipe_dprctd 0666   system     system
 /dev/ttyS*                0666   system     system
 /dev/goldfish_sync        0666   system     system
 /dev/vport*               0666   system     system
