Send the `bootcomplete` signal once
The emulator may restart the framework when
it receives the `bootcomplete` signal which
causes the framework to send another one
`bootcomplete` which will cause another
framework restart, etc.

Bug: 267401262
Test: presubmit
Change-Id: I11dc36a94170d6e9c17b0fef46436e26f10aaaa2
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -98,6 +98,8 @@ on property:vendor.qemu.timezone=*
 
 on property:dev.bootcomplete=1
     setprop vendor.qemu.dev.bootcomplete 1
+
+on property:vendor.qemu.dev.bootcomplete=1
     start qemu-props-bootcomplete
     start ranchu-setup
 
