Switch our fingerprint HAL to start lazily
to save resources when the HAL is not needed.

Bug: 272511336
Test: atest VtsHalBiometricsFingerprintTargetTest
Change-Id: I2a31721aa0821fe1c40d9bf2dd896f14000c3a9f
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/fingerprint/android.hardware.biometrics.fingerprint-service.ranchu.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint-service.ranchu.rc
@@ -1,6 +1,8 @@
 service vendor.android.hardware.biometrics.fingerprint-service.ranchu /vendor/bin/hw/android.hardware.biometrics.fingerprint-service.ranchu
-    class late_start
+    interface aidl android.hardware.biometrics.fingerprint.IFingerprint/default
+    class hal
     user system
     group system input uhid
     task_profiles ServiceCapacityLow
-
+    oneshot
+    disabled
