Rename the fingerprint service
too long for logcat

Bug: 272511336
Test: presubmit
Change-Id: I10fae8d1d46d2699ec0b868bd044be922fd0a3f5
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/fingerprint/android.hardware.biometrics.fingerprint-service.ranchu.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint-service.ranchu.rc
@@ -1,4 +1,4 @@
-service vendor.android.hardware.biometrics.fingerprint-service.ranchu /vendor/bin/hw/android.hardware.biometrics.fingerprint-service.ranchu
+service vendor.biometrics.fingerprint-service.ranchu /vendor/bin/hw/android.hardware.biometrics.fingerprint-service.ranchu
     interface aidl android.hardware.biometrics.fingerprint.IFingerprint/default
     class hal
     user system
