Add the system_dlkm partition to goldfish
required by GKI

Bug: 277230251
Test: atest -c vts_dlkm_partition_test
Change-Id: Ie87dc52c0054a197d6dd30498e9c3fa3a24bae4a
Merged-In: Ie87dc52c0054a197d6dd30498e9c3fa3a24bae4a
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -24,6 +24,8 @@ on early-init
     # GTS tests are migrated to ro.boot.qemu.
     setprop ro.kernel.qemu 1
 
+    start vendor.dlkm_loader
+
 on init
     # set RLIMIT_MEMLOCK to 8MB for BPF network statistics
     setrlimit memlock 8388608 8388608
@@ -102,6 +104,13 @@ on boot
 
     # Create an unused USB gadget to allow sysfs testing
     mkdir /config/usb_gadget/g1 0770 root root
+
+service vendor.dlkm_loader /vendor/bin/dlkm_loader
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
 
 service ranchu-setup /vendor/bin/init.ranchu-core.sh
     class core
