Load zram in init.ranchu.rc
only vendor modules are loaded by vendor.dlkm_loader
and zram was moved to GKI.

Bug: 285345418
Test: check if /dev/block/zram0 is available
Change-Id: Id426be620244cada10054c627193333ff26844b0
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -24,6 +24,7 @@ on early-init
     setprop vendor.qemu.dev.bootcomplete 0
 
     start vendor.dlkm_loader
+    exec u:r:modprobe:s0 -- /system/bin/modprobe -a -d /system/lib/modules zram.ko
 
 on init
     # set RLIMIT_MEMLOCK to 8MB for BPF network statistics
