--- a/data/etc/google/64bit/user/advancedFeatures.ini
+++ b/data/etc/google/64bit/user/advancedFeatures.ini
@@ -24,6 +24,7 @@ VirtconsoleLogcat = on
 VirtioVsockPipe = on
 AndroidbootProps2 = on
 DeviceSkinOverlay = on
+SupportPixelFold = on
 VulkanQueueSubmitWithCommands = on
 VulkanBatchedDescriptorSetUpdate = on
 DeviceStateOnBoot = on
