--- a/data/etc/google/64bit/userdebug/advancedFeatures.ini
+++ b/data/etc/google/64bit/userdebug/advancedFeatures.ini
@@ -23,6 +23,7 @@ VirtconsoleLogcat = on
 VirtioVsockPipe = on
 AndroidbootProps2 = on
 DeviceSkinOverlay = on
+SupportPixelFold = on
 VulkanQueueSubmitWithCommands = on
 VulkanBatchedDescriptorSetUpdate = on
 DeviceStateOnBoot = on
