--- a/data/etc/google/userdebug/arm64/advancedFeatures.ini
+++ b/data/etc/google/userdebug/arm64/advancedFeatures.ini
@@ -22,6 +22,7 @@ VirtconsoleLogcat = on
 VirtioVsockPipe = on
 AndroidbootProps2 = on
 DeviceSkinOverlay = on
+SupportPixelFold = on
 VulkanQueueSubmitWithCommands = on
 VulkanBatchedDescriptorSetUpdate = on
 DeviceStateOnBoot = on
